force-app/main/default/objects/TestDrive__c/fields/AssignedDealership__c.field-meta.xml
<CustomField>
    <fullName>AssignedDealership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Dealership</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Test Drives</relationshipLabel>
    <relationshipName>TestDrives</relationshipName>
    <type>Lookup</type>
</CustomField>