force-app/main/default/objects/TestDrive__c/fields/Available_Slots__c.field-meta.xml
<CustomField>
    <fullName>Available_Slots__c</fullName>
    <description>Available Slots for the next 10 days</description>
    <label>Available Slots</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>