force-app/main/default/objects/TestDrive__c/fields/BookingSource__c.field-meta.xml
<CustomField>
    <fullName>BookingSource__c</fullName>
    <label>Booking Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agentforce Chat</fullName>
                <default>true</default>
                <label>Agentforce Chat</label>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>Web Form</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>