force-app/main/default/objects/TestDrive__c/fields/PreferredChannel__c.field-meta.xml
<CustomField>
    <fullName>PreferredChannel__c</fullName>
    <label>Preferred Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>WhatsApp</fullName>
                <default>true</default>
                <label>WhatsApp</label>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>