force-app/main/default/objects/TestDrive__c/fields/PreferredDate__c.field-meta.xml
<CustomField>
    <fullName>PreferredDate__c</fullName>
    <label>Preferred Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>