force-app/main/default/objects/TestDrive__c/fields/PreferredTime__c.field-meta.xml
<CustomField>
    <fullName>PreferredTime__c</fullName>
    <label>Preferred Time</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Morning (9AM-12PM)</fullName>
            </value>
            <value>
                <fullName>Afternoon (12PM-4PM)</fullName>
            </value>
            <value>
                <fullName>Evening (4PM-7PM)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>