force-app/main/default/objects/TestDrive__c/fields/VehicleModel__c.field-meta.xml
<CustomField>
    <fullName>VehicleModel__c</fullName>
    <label>Vehicle Model</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>