force-app/main/default/objects/TestDrive__c/fields/ZipCode__c.field-meta.xml
<CustomField>
    <fullName>ZipCode__c</fullName>
    <label>Zip Code</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>