force-app/main/default/objects/TestDrive__c/listViews/Test_Drive_Booking_Queue_TestDrive.listView-meta.xml
<ListView>
    <fullName>Test_Drive_Booking_Queue_TestDrive</fullName>
    <filterScope>Queue</filterScope>
    <label>Test Drive Booking Queue</label>
    <queue>Test_Drive_Booking_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>